<resources>
    <string name="app_name">InnoLib</string>
    <string name="signin">Sign In</string>
    <string name="signin_title">Sign In</string>
    <string name="signin_cancel">Cancel</string>
    <string name="signin_hint_user_id">id</string>
    <string name="signin_hint_user_password">password</string>
    <string name="signin_info_wrong_userid_form">Wrong user id</string>
    <string name="signin_info_wrong_userid_or_password">Password or user id is wrong</string>
    <string name="signin_info_connection_problem">Connection problem</string>
    <string name="signin_info_unknown_error">Oops... Try again</string>
    <string name="signin_additional_methods">Privacy</string>
    <string name="signin_additional_methods_description">Confirm your identity at each start for safe usage</string>
    <string name="signin_additional_methods_back">Go back</string>
    <string name="signin_additional_methods_apply">Apply</string>
    <string name="signin_additional_methods_device_does_not_support">Device does not support this feature</string>
    <string name="signin_without_pin_not_allowed">Usage of NFC or fingerprint without PIN is not allowed</string>
    <string name="signin_methods_pin_info">Pin</string>
    <string name="signin_methods_card_info">University card</string>
    <string name="signin_methods_fingerprint_info">Fingerprint</string>
    <string name="signout_confirm_title">Confirm sign out</string>
    <string name="signout_confirm_question">Do you want to sign out?</string>
    <string name="identity_confirm_title">Confirm Identity</string>
    <string name="identity_confirm_pin_mismatch">Wrong pin, try again</string>
    <string name="identity_confirm_train_pin_only_info">Enter your new pin</string>
    <string name="identity_confirm_train_pin_only_repeat_info">Enter your pin again to confirm</string>
    <string name="identity_confirm_train_pin_info">Enter your new pin to use it as backup</string>
    <string name="identity_confirm_train_pin_repeat_info">Confirm your pin to the next step</string>
    <string name="identity_confirm_train_fingerprint_default">Fingerprint read from device storage and can be used so far</string>
    <string name="identity_confirm_train_fingerprint_next_to_card">Card setup</string>
    <string name="identity_confirm_train_fingerprint_finish">Finish</string>
    <string name="identity_confirm_train_card_read_ready">Read your card by built-in NFC Reader</string>
    <string name="identity_confirm_train_card_read_done">Card read succeed</string>
    <string name="identity_confirm_train_card_finish">Save and finish</string>
    <string name="home_patron_menu_item_profile">Profile</string>
    <string name="home_patron_menu_item_library">Library</string>
    <string name="home_patron_menu_item_settings">Settings</string>
    <string name="home_library_list_document_stock_empty">No copies left</string>
    <string name="home_library_list_document_stock_last">One copy left</string>
    <string name="home_library_list_document_stock_default"> copies left</string>
    <string name="home_library_list_document_checkout">CHECKOUT</string>
    <string name="home_library_list_document_checkout_unavailable_reference">Reference book</string>
    <string name="home_library_list_document_checkout_unavailable_magazine">Magazine</string>
    <string name="home_library_list_document_bestseller">BESTSELLER</string>
    <string name="home_library_checkout_request">Add checkout request</string>
    <string name="home_library_checkout_cancel_button">Cancel</string>
    <string name="home_library_checkout_confirm_button">Confirm</string>
    <string name="home_library_checkout_confirm_title">Confirm check out</string>
    <string name="home_library_checkout_confirm_subtitle">Do you want to check out this document?</string>
    <string name="home_library_tab_all">All</string>
    <string name="home_library_tab_books">Books</string>
    <string name="home_library_tab_articles">Articles</string>
    <string name="home_library_tab_av">A/V Materials</string>
    <string name="home_profile_tab_checked_out_books">Checked out books</string>
    <string name="home_settings_title">Settings</string>
    <string name="user_type_librarian">Librarian</string>
    <string name="user_type_student">Student</string>
    <string name="user_type_teacher_assistant">Teacher assistant</string>
    <string name="user_type_professor">Professor</string>
    <string name="user_type_instructor">Instructor</string>
    <string name="user_type_visiting_professor">Visiting professor</string>
    <string name="welcome_description">Welcome to the new LMS system for Innopolis University by AwesTeam group. Click next to sign in, using your library id</string>
    <string name="welcome_next">Next</string>
    <string name="welcome_finish">Start</string>
    <string name="welcome_welcome_header">Welcome!</string>
    <string name="document_0">Book</string>
    <string name="document_1">Article</string>
    <string name="document_2">A/V</string>
</resources>
