<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom">

    <FrameLayout
        android:id="@+id/fragment_checkout_confirm_cancel_outside_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_dialog_shadow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorLightBackground"
            android:elevation="@dimen/bottom_dialog_elevation"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_library_checkout_confirm_title"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <TextView
                android:id="@+id/fragment_checkout_confirm_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_library_checkout_confirm_subtitle"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/fragment_checkout_confirm_document_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fragment_checkout_confirm_cancel_button"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_library_checkout_cancel_button" />

                <Button
                    android:id="@+id/fragment_checkout_confirm_confirm_button"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_library_checkout_confirm_button" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>