<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.awesprojects.innolib.activities.WelcomeActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            android:scaleType="center"
            android:src="@drawable/library_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_welcome_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/welcome_welcome_header"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_description" />

            </LinearLayout>

            <Button
                android:id="@+id/activity_welcome_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="6dp"
                android:text="@string/welcome_finish" />

        </LinearLayout>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
