<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBackground">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:clipToPadding="true"
        android:fitsSystemWindows="false"
        android:nestedScrollingEnabled="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/fragment_home_library_searchbackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:transitionName="SearchBarBackground"
                    app:cardUseCompatPadding="true">

                    <com.awesprojects.innolib.widgets.LibrarySearchBar
                        android:id="@+id/fragment_home_library_searchbar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/android_searchbar_height"
                        android:layout_weight="1"
                        android:transitionName="SearchBar" />
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/fragment_home_library_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:tabGravity="center"
                app:tabMode="scrollable">

                <android.support.design.widget.TabItem
                    android:id="@+id/fragment_home_library_tab_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="-1"
                    android:text="@string/home_library_tab_all" />

                <android.support.design.widget.TabItem
                    android:id="@+id/fragment_home_library_tab_books"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="0"
                    android:text="@string/home_library_tab_books"
                    android:visibility="invisible" />

                <android.support.design.widget.TabItem
                    android:id="@+id/fragment_home_library_tab_articles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="@string/home_library_tab_articles"
                    android:visibility="gone" />

                <android.support.design.widget.TabItem
                    android:id="@+id/fragment_home_library_tab_av"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="@string/home_library_tab_av"
                    android:visibility="invisible" />
            </android.support.design.widget.TabLayout>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <FrameLayout
            android:id="@+id/fragment_home_library_root_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/fragment_home_library_list_swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="false">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/fragment_home_library_main_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="false"
                    android:nestedScrollingEnabled="true"
                    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />
            </android.support.v4.widget.SwipeRefreshLayout>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>